--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "data-queue": "0.0.3",
     "debug": "^3.1.0",
     "epimetheus": "^1.0.55",
-    "hapi": "^16.6.2",
+    "hapi": "https://github.com/mmpmm/hapi.git",
     "inert": "^4.2.1",
     "libp2p-crypto": "^0.12.1",
     "mafmt": "^4.0.0",
